rbac/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: console-rbac
  name: console-rbac
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: console-rbac
  type: ClusterIP
status:
  loadBalancer: {}
